@startuml

class Main {
    - funcionarios: ArrayList<Funcionario>
    - scanner: Scanner
    + main(String[] args)
    + gerarMatricula(ArrayList<Funcionario> funcionarios)
    + addFuncionario()
    + consultarFuncionarios()
    + demitirFuncionario()
    + consultarSalarios()
    + validarCPF(String cpf)
    + cpfJaCadastrado(String cpf)
}

class Funcionario {
    - nome: String
    - cpf: String
    - salario: double
    - matricula: int
    - dep: Departamento
    + Funcionario(String nome, String cpf, double salario, int matricula, Departamento dep)
    + getNome(): String
    + getCPF(): String
    + getMatricula(): int
    + showSalario(): double
    + getDep(): Departamento
}

class Departamento {
    - nome: String
    - folhaSalarial: double
    - alocados: int
    - departamentos: ArrayList<Departamento>
    + Departamento(String nome, double folhaSalarial, int alocados)
    + inicializarDepartamentos()
    + getDepartamentos(): ArrayList<Departamento>
    + getNome(): String
    + incrementFolha(double salario): double
    + getFolhaSalarial(): double
    + alocar(int count): int
    + getAlocados(): int
    + getMediaSalarial(): double
    + getDep(int indice): Departamento
}

Main --> Funcionario: contém
Main --> Departamento: contém
Funcionario --> Departamento: pertence

@enduml
